--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <div id="buttonDiv"></div>
 
+<div id="createNewButton">Create New Button: <input type="text" id="textEntry"><button name="submitButton" id="submitButton" value="submit">SUBMIT</button></div>
+
 <div class="gifDivContainer"></div>
 
 <div id="scriptDiv">
