--- a/index.html
+++ b/index.html
@@ -7,20 +7,64 @@
     <title>GIF App</title>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- BOOTSTRAP Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
 
 </head>
 
 <body>
 
-<div id="buttonDiv"></div>
+    <div class="container">
 
-<div id="createNewButton">Create New Button: <input type="text" id="textEntry"><button name="submitButton" id="submitButton" value="submit">SUBMIT</button></div>
+        <div class="row">
 
-<div class="gifDivContainer"></div>
+            <div class="col-md-3"></div>
 
-<div id="scriptDiv">
-    <script src="app.js"></script>
-</div>
+        <div class="col-md-6"><div id="buttonDiv"></div>
+    </div>
+
+        <div class="col-md-3"></div>
+
+    </div>
+
+    <div class="row">
+
+        <div class="col-md-3"></div>
+
+        <div class="col-md-6">
+
+        <div id="createNewButton">Create New Button:
+            <input type="text" id="textEntry">
+            <button name="submitButton" id="submitButton" class="btn btn-primary" value="submit">SUBMIT</button>
+        </div>
+
+        </div>
+
+        <div class="col-md-3"></div>
+
+    </div>
+
+       
+
+        
+
+
+    <div class="row">
+
+    <div class="col-md-2"></div>
+
+       <div class="col-md-8 gifDivContainer"></div>
+
+    <div class="col-md-2"></div>
+
+    </div>
+
+    <div id="scriptDiv">
+        <script src="app.js"></script>
+    </div>
+
+    </div>
 
 </body>
 
