--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
 
     <div class="col-md-2"></div>
 
-       <div class="col-md-8 gifDivContainer"></div>
+       <div class="col-md-8 gifDivContainer"><div class="card">
+            <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div></div>
 
     <div class="col-md-2"></div>
 
